# oop_lab5

./: .gitignore  CMakeLists.txt  main.cpp
include/: iterator.h  list.h  my_pmr.h  node.h  point.h  shape.h  square.h
src/: my_pmr.cpp
test/: tests5.cpp
